--- a/style.css
+++ b/style.css
@@ -29,13 +29,7 @@ section {
     padding: 40px;
 }
 
-.project-icons {
-    display: flex;
-}
 
-.project-icons a {
-    margin-right: 10px;
-}
 
 .skill-icons {
     display: flex;
@@ -66,3 +60,38 @@ footer ul li a {
     color: #fff;
     text-decoration: none;
 }
+.project-section {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.project {
+  width: calc(33.33% - 20px);
+  margin-bottom: 40px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.project-description {
+  text-align: center;
+}
+
+.project-icon {
+  width: 100px;
+  height: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #f1f1f1;
+  border-radius: 5px;
+}
+
+.project-icon img {
+  width: 60px;
+  height: 60px;
+}
+
+/* Adjust the styling as needed */
+
