--- a/style.css
+++ b/style.css
@@ -78,20 +78,24 @@ footer ul li a {
   text-align: center;
 }
 
+
 .project-icon {
-  width: 100px;
-  height: 100px;
+  width: calc(33.33% - 20px); /* Adjust the width based on the desired size and spacing */
+  height: auto;
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: #f1f1f1;
+  background-color: transparent;
   border-radius: 5px;
+  padding: 0;
+  margin: 10px; /* Add some margin for spacing between icons */
 }
 
 .project-icon img {
-  width: 60px;
-  height: 60px;
+  max-width: 100%;
+  max-height: 100%;
 }
 
-/* Adjust the styling as needed */
+
+
 
